[package]
name = "phasmophobia_xp_grinder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
opt-level = "s"

[dependencies.windows]
version = "0.51.1"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"]

[dependencies.anyhow]
version = "1.0.75"
